aws/k8s/secret-challenge-vault-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: secret-challenge
  labels:
    app: secret-challenge
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: secret-challenge
