aws/k8s/secret-challenge-vault-ingress.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: secret-challenge
  labels:
    app: secret-challenge
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: secret-challenge
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: wrongsecrets
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: secret-challenge
              port:
                number: 80
